--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ certifi==2018.11.29
 chardet==3.0.4
 Click==7.0
 Flask==1.0.2
+Flask-SocketIO==3.3.1
 idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10
@@ -9,6 +10,8 @@ MarkupSafe==1.1.0
 PyJWT==1.7.1
 PyMySQL==0.9.3
 PySocks==1.6.8
+python-engineio==3.4.3
+python-socketio==3.1.2
 pytz==2018.9
 requests==2.21.0
 six==1.12.0
