--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,17 @@
 certifi==2018.11.29
 chardet==3.0.4
 Click==7.0
+dnspython==1.16.0
+eventlet==0.24.1
 Flask==1.0.2
 Flask-SocketIO==3.3.1
+greenlet==0.4.15
 gunicorn==19.9.0
 idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10
 MarkupSafe==1.1.0
+monotonic==1.5
 PyJWT==1.7.1
 PyMySQL==0.9.3
 PySocks==1.6.8
