--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ chardet==3.0.4
 Click==7.0
 cryptography==2.6.1
 dnspython==1.16.0
+eventlet==0.24.1
 Flask==1.0.2
 Flask-SocketIO==3.3.1
 greenlet==0.4.15
